# SuffixTree

./: CMakeLists.txt  README.md  runtests.sh
app/: CMakeLists.txt  app.cpp
include/: SuffixTree.hpp  SuffixTreePrinter.hpp  SuffixTreeVeriefer.hpp  SuffixTreeVizualizer.hpp
src/: SuffixTree.hpp  SuffixTreePrinter.hpp  SuffixTreeVeriefer.hpp  SuffixTreeVizualizer.hpp  main.cpp
tests/: CMakeLists.txt
tests/GoogleTests/: CMakeLists.txt  basic.cpp  stress.cpp  test_functions.cmake
tests/GoogleTests/Helpers/: TestGenerator.hpp
tests/GoogleTests/SuffixTree/: CMakeLists.txt  basic.cpp  stress.cpp
tests/StaticAnalysis/: .clang-tidy  CMakeLists.txt  clang_format_tests.sh  clang_tidy_tests.sh
